--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,16 @@
 name: change_project_name
-description: A sample command-line application.
+description: A CLI tool to rename Flutter/Dart projects and update all package references automatically
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/anugrahsputra/change_project_name
+homepage: https://github.com/anugrahsputra/change_project_name
+documentation: https://github.com/anugrahsputra/change_project_name#readme
+topics:
+  - cli
+  - flutter
+  - dart
+  - rename
+  - refactor
+
 
 environment:
   sdk: ^3.9.0
@@ -10,6 +19,7 @@ environment:
 dependencies:
   path: ^1.9.0
   yaml: ^3.1.3
+  args: ^2.7.0
 
 dev_dependencies:
   lints: ^6.0.0
